[package]
name = "rocketscience"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "rocketscience"

[dependencies]
uniffi_macros = "0.17.0"
uniffi = { version = "0.17.0", features = ["builtin-bindgen"] }
thiserror = "1.0"
uniffi_build = "0.17.0"

[build-dependencies]
uniffi_build = { version = "0.17.0", features = ["builtin-bindgen"] }

[workspace]
members = [
    ".",
    "xtask",
]
