[package]
name = "rocketscience"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "rocketscience"

[dependencies]
thiserror = "1.0.44"
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[workspace]
members = [
    ".",
    "xtask",
    "bindgen",
]

[workspace.dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs/" }
